fix: 레이아웃 간격 조정, 추천질문 overflow 수정

--- a/src/components/Chatbot.module.css
+++ b/src/components/Chatbot.module.css
@@ -134,16 +134,18 @@
   grid-row: 1/ 2 span;
   grid-column: 3/ 2 span;
   align-self: end;
-  font-size: 3rem;
+  font-size: 3.2rem;
   letter-spacing: 9%;
   font-weight: 700;
   background: linear-gradient(to right, #9F132E, #FF768F);
   background-clip: text;
+  white-space: nowrap;
+  /* 줄바꿈을 방지 */
   -webkit-background-clip: text;
   color: transparent;
 }
 
-.initialSummaryImg {
+.initialSummaryImgWrap {
   grid-row: 3 / 3 span;
   grid-column: 2 / 4 span;
   justify-self: stretch;
@@ -162,6 +164,8 @@
   grid-template-columns: repeat(2, 50%);
   gap: 3rem;
   justify-content: space-around;
+  white-space: nowrap;
+  /* 줄바꿈을 방지 */
 }
 
 .initialSummaryContent {
@@ -279,15 +283,16 @@
 
 /* 챗봇 추천 질문 컨테이너 */
 .suggestContainer {
-  grid-row: 7 / 2 span;
-  grid-column: 1 / 6 span;
+  grid-row: 7 / span 2;
+  grid-column: 1 / span 6;
   justify-self: end;
   display: grid;
   grid-template-rows: repeat(3, 33.33%);
+  padding-left: 7rem;
   align-content: stretch;
-  row-gap: 1.2rem;
-  width: 100%;
+  max-width: 90%;
   height: 13.7rem;
+  box-sizing: border-box;
   /* height: auto; */
   margin-right: 7.4rem;
 }
@@ -298,7 +303,9 @@
   /* 아이템이 넘칠 경우 줄바꿈 */
   flex-wrap: wrap;
   justify-content: flex-end;
-  gap: 0.6rem;
+  gap: 0.5rem 0.5rem;
+  overflow-y: scroll;
+  box-sizing: border-box;
 }
 
 /* 추천 질문 내의 각 항목 */
@@ -310,10 +317,12 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   text-align: center;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-top: 0.6rem;
-  padding-bottom: 0.6rem;
+  margin-top: 0.3rem;
+  /* 순서대로 padding-top, padding-right, padding-bottom, padding-left */
+  padding: 0.6rem 2rem 0.4rem 2rem;
+  /* 줄바꿈을 방지 */
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
 .textBox:hover {
@@ -351,6 +360,7 @@
 
 .prompt {
   overflow-y: scroll;
+  align-self: center;
   flex: 1;
   border: none;
   margin-left: 2.7rem;
@@ -370,9 +380,9 @@
 
 /* 스크롤바의 전체 너비를 설정 */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 1rem;
   /* 세로 스크롤바의 너비 */
-  height: 12px;
+  height: 0.5rem;
   /* 가로 스크롤바의 높이 */
 }
 
